2008-10-22  Alp Toker  <alp@nuanti.com>

        Reviewed by Adam Roben.

        Avoid critical warnings on older GTK+ versions (2.8) by not checking
        for GTK+ setting properties when we know they don't exist.

        * WebCoreSupport/ContextMenuClientGtk.cpp:
        (WebKit::inputMethodsMenuItem):
        (WebKit::unicodeMenuItem):

2008-10-20  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Remove FrameLoaderClient::detachedFromParent4.  It is no longer used by any port.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        * WebCoreSupport/FrameLoaderClientGtk.h:

2008-10-20  Alp Toker  <alp@nuanti.com>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=21303
        [GTK] Scrolling glitches

        Implement a buffering scheme to avoid full repaints when scrolling
        views or subframes significantly improving scrolling performance.

        Improve rendering performance by coalescing large numbers of small
        repaints.

        Also fixes long-running issues with scrollbar positioning and frame
        invalidation.

        Rendering in the GTK+ port should be more similar to other ports after
        these changes.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::repaint):
        (WebKit::ChromeClient::scroll):
        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::forceLayout):
        * webkit/webkitwebview.cpp:

2008-10-17  Luke Kenneth Casson Leighton  <lkcl@lkcl.net>

        Reviewed by Mark Rowe. Landed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=20403
        [Gtk] Segfault after a table with an iframe is attempted to be added twice to DOM model with javascript

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::frameLoaderDestroyed):
        (WebKit::FrameLoaderClient::detachedFromParent4):

2008-10-06  David Hyatt  <hyatt@apple.com>
