@@ -226,12 +226,14 @@ static void webkit_web_view_get_property(GObject* object, guint prop_id, GValue*
     WebKitWebView* webView = WEBKIT_WEB_VIEW(object);
 
     switch(prop_id) {
+#if GTK_CHECK_VERSION(2,10,0)
     case PROP_COPY_TARGET_LIST:
         g_value_set_boxed(value, webkit_web_view_get_copy_target_list(webView));
         break;
     case PROP_PASTE_TARGET_LIST:
         g_value_set_boxed(value, webkit_web_view_get_paste_target_list(webView));
         break;
+#endif
     case PROP_EDITABLE:
         g_value_set_boolean(value, webkit_web_view_get_editable(webView));
         break;
@@ -1225,19 +1227,36 @@ static void webkit_web_view_class_init(WebKitWebViewClass* webViewClass)
     /*
      * properties
      */
+
+#if GTK_CHECK_VERSION(2,10,0)
+    /**
+    * WebKitWebView:copy-target-list:
+    *
+    * The list of targets this web view supports for clipboard copying.
+    *
+    * Since: 1.0.2
+    */
     g_object_class_install_property(objectClass, PROP_COPY_TARGET_LIST,
                                     g_param_spec_boxed("copy-target-list",
-                                                       "Target list",
-                                                       "The list of targets this Web view supports for copying to the clipboard",
+                                                       "Copy target list",
+                                                       "The list of targets this web view supports for clipboard copying",
                                                        GTK_TYPE_TARGET_LIST,
                                                        WEBKIT_PARAM_READABLE));
 
+    /**
+    * WebKitWebView:paste-target-list:
+    *
+    * The list of targets this web view supports for clipboard pasting.
+    *
+    * Since: 1.0.2
+    */
     g_object_class_install_property(objectClass, PROP_PASTE_TARGET_LIST,
                                     g_param_spec_boxed("paste-target-list",
-                                                       "Target list",
-                                                       "The list of targets this Web view supports for pasting to the clipboard",
+                                                       "Paste target list",
+                                                       "The list of targets this web view supports for clipboard pasting",
                                                        GTK_TYPE_TARGET_LIST,
                                                        WEBKIT_PARAM_READABLE));
+#endif
 
     g_object_class_install_property(objectClass, PROP_SETTINGS,
                                     g_param_spec_object("settings",
